--- a/style.css
+++ b/style.css
@@ -3,16 +3,43 @@ width: 242px;
 height: 254px;
 flex-shrink: 0;
 border-radius: 8px;
-background: #FFF;
+background: #b82e2e;
 box-shadow: -5px 5px 25px 2px #D9D9D9;
+margin:auto;
 }
 
-.bouton-de-connexion{
-width: 123px;
-height: 28px;
-flex-shrink: 0;
-border-radius: 8px;
-border: 1px solid rgba(0, 0, 0, 0.50);
-background: #0C0C0C;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+.box_email{
+    padding: 5%;
+    width: 33%;
+    text-align: center;
+    margin:auto;
+}
+
+.titre{
+color: #000;
+font-family: "Reem Kufi";
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+padding: 2.5%;
+text-align: center;
+margin:auto;
+}
+
+.box_mdp{
+    margin: auto;
+}
+
+#label_email{
+
+}
+*
+{
+    font-family: "Reem Kufi";
+}
+.bouton_validation{
+    margin: auto;
+    
 }
