--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 .rectangle_connexion{
-width: 242px;
-height: 254px;
+width: 60%;
+height: 75%;
 flex-shrink: 0;
 border-radius: 8px;
-background: #b82e2e;
+background: #FFF;
 box-shadow: -5px 5px 25px 2px #D9D9D9;
 margin:auto;
 }
@@ -11,24 +11,26 @@ margin:auto;
 
 .box_email{
     padding: 5%;
-    width: 33%;
+    width: 55%;
     margin:auto;
 }
 
 .titre{
-color: #000;
-font-family: "Reem Kufi";
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-padding: 2.5%;
-text-align: center;
-margin:auto;
-}
+    color: #000;
+    font-family: "Reem Kufi";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding: 2.5%;
+    text-align: center;
+    margin:auto;
+    }
 
 .box_mdp{
     margin: auto;
+    width: 55%;
+    padding: 5%;
 }
 
 .bouton_validation{
@@ -38,4 +40,25 @@ margin:auto;
 
 .label_email, .label_mdp{
     text-align: center;
+}
+
+input{
+    width: 195px;
+    height: 27px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
+}
+
+.bouton_validation{
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin: auto;
+    flex-shrink: 0;
+    color: #0C0C0C;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.50);
+    background: #0C0C0C;
+    box-shadow: 0px 4px 4px 0px rgba(80, 72, 72, 0.25);
 }
