--- a/MVC/public/assets/css/style.css
+++ b/MVC/public/assets/css/style.css
@@ -3,9 +3,103 @@
 }
 
 .listeCriteres{
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
 }
 
+.critere{
+    margin : 2px;
+}
 legend{
     font-style: italic;
+    font-size: large;
+}
+
+.switch {
+    position: relative;
+    align-items: center;
+    display: inline-block;
+    width: 30px;
+    height: 17px;
+  }
+  
+
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #d61212;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .2s;
+    transition: .2s;
+  }
+  
+  input:checked + .slider {
+    background-color: #1bda4b;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 5px #1bda4b;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 13px;
+  }
+  
+  .slider.round:before {
+    border-radius: 60%;
+  }
+
+
+  .bouton_normal {
+    text-align: center;
+    color: #fafafa;
+    background-color: #284e31;
+    text-decoration: none;
+    border-radius: 8px;
+    width: 100px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    margin-left: 50%;
+}
+
+.fieldset_general{
+  display: flex;
+  flex-direction: column;
+  margin-left: 50%;
+}
+
+.hidden {
+  display: none;
+}
+
+.commentaire{
+  margin-top: 50px;
+  margin-left: auto;
 }
